--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,27 @@
+<div>
+    <h1>List of all users</h1>
+</div>
 
+<ul> 
+    <% @users.each do |user| %>
+        <li class= "user" >
+                <div class = "userphoto">
+                    <% if user.photo %>
+                        <img src="<%= user.photo %>" >
+                    <% else %>
+                        <p> No image found </p>
+                    <% end %>
+                </div>
 
-
-
-
-<section class ="appearance-none">
-<h1 class = "text-3xl font-medium text-center mb-4">List of users</h1>
-<% @users.each do |user| %>        
-  <a href= <%= "users/#{user.id}"%>>
-  <div class ="flex items-center gap-4">
-      <%= image_tag(user.photo)%>
-        <h2 class ="text-2xl"> <%= user.name %></h2>
-          Number of posts:
-          <%= user.posts_counter || 0 %>
-          </div>
-      </a> 
-
+                
+                    <div class = "username">
+                        <a href="<%= url_for(user_path(user)) %>" >
+                            <h2 ><%= user.name %></h2>
+                            <p> Number of posts: <%= user.posts_counter %> </p>
+                        </a>
+                    </div>
+        </li>
     <% end %>
-</section>
+</ul>
+
+
