--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,111 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+  color: black;
+}
+
+.container {
+  margin: 0 auto;
+  width: 30%;
+}
+
+h1 {
+  margin-bottom: 20px;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  list-style: none;
+  margin: 0;
+}
+
+.user,
+.user-details {
+  display: flex;
+  gap: 30px;
+  text-decoration: none;
+}
+
+li:nth-child(even) {
+  background-color: aliceblue;
+}
+
+.userphoto,
+.username {
+  border: 1px solid black;
+}
+
+.userphoto {
+  width: 100px;
+  height: 100px;
+}
+
+.username {
+  display: flex;
+  flex-direction: column;
+  padding: 2%;
+  width: 70%;
+}
+
+.username p {
+  margin-top: 30px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+a {
+  text-decoration: none;
+}
+
+.user-details {
+  flex-direction: column;
+  gap: 10px;
+}
+
+.bio,
+.eachpost {
+  border: 1px solid;
+  padding: 2%;
+}
+
+.bio {
+  margin-bottom: 10px;
+}
+
+.bio h4,
+.eachpost h4 {
+  margin-bottom: 20px;
+}
+
+.eachpost h6,
+.post h6 {
+  text-align: right;
+}
+
+.button {
+  margin: auto;
+  padding: 10px 20px;
+  font-size: 16px;
+  align-self: center;
+  justify-self: center;
+}
+
+.post {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+
+.post div {
+  border: 1px solid;
+  padding: 2%;
+}
+
+.gap {
+  display: flex;
+  gap: 30px;
+}
