--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,26 +1,36 @@
-<section class = 'appearance-none'>
-<h1 class = 'text-3xl font-medium mb-5'>Single user</h1>
+<h1>Show a particular user</h1>
 
-<div class = ' py-4'>
-    <img src="<%= @user.photo %>" alt="user photo">
-    <h2> <%= @user.name %></h2>
-      <p>Number of posts: <%= @user.posts_counter %></p>
- 
-  <h2>Bio</h2>
-  <p><%= @user.bio %></p>
-  <% @user.most_recent_posts.each do |post| %>
-      <h2 class ="font-bold">Post #<%= post.id %></h2>
-      <p><%= post.text %></p>
-        <span>Comments: <%= "#{post.comments_counter || 0 } "%></span>
-        <span>, Likes: <%= "#{ post.likes_counter || 0 }"%></span>
-  <% end %> 
-  <div>
-  <div class="p-2 bg-blue-500 inline-block rounded-md">
-    <a href=<%= "/users/#{@user.id}/posts"%>>
-    <span class="text-white font-semibold">See All Posts</span>
-  </a>
-  </div>
-  </div>
-<div>
-  </section>
-  
+<div class= "user-details" >
+    <div class = "user">
+        <div class = "userphoto">
+            <% if @user.photo %>
+                <img src="<%= @user.photo %>" >
+            <% else %>
+                <p> No image found </p>
+            <% end %>
+        </div>
+
+        <div class = "username">
+                <h2 ><%= @user.name %></h2>
+                <p> Number of posts: <%= @user.posts_counter %> </p>
+        </div>
+    </div>
+
+    <div class = "bio">
+        <h4>Bio</h4>
+        <p> <%= @user.bio %> </p>
+    </div>
+
+    <% counter = 1 %>
+    <% @user.recent_posts.each do |post| %>
+        <div class = "eachpost">
+            <h4>Post #<%= counter %></h4>
+            <p><%= post.text %></p>
+            <% counter += 1 %>
+            <h6>Comments:<%= post.comments_counter %> Likes:<%= post.likes_counter %> </h6>
+        </div>
+    <% end %>
+    <a href="<%= url_for(user_posts_path(@user)) %>" class="button" >
+        <button> See all posts </button>
+    </a>
+</div>
