Add devise create login signup forget password with devise

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,12 +6,32 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "application", "header", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
+    
+    
     <div class= "container">
+      <header>
+        <div class="logo">RailsBlog</div>
+        <nav>
+          <% if current_user %>
+            <ul>
+              <li><%= link_to "Edit Account", edit_user_registration_path %></li>
+              <li><%= button_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+            </ul>
+          <% else %>
+            <ul>
+              <li><%= link_to "Sign Up", new_user_registration_path %></li>
+              <li><%= link_to "Sign In", new_user_session_path %></li>
+            </ul>
+          <% end %>
+        </nav>
+      </header>
+       <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
        <%= yield %>
     </div>
   </body>
