--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,127 +1,150 @@
+/*
+ * This is a manifest file that'll be compiled into application.css, which will include all the files
+ * listed below.
+ *
+ * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
+ * vendor/assets/stylesheets directory can be referenced here using a relative path.
+ *
+ * You're free to add application-wide styles to this file and they'll appear at the bottom of the
+ * compiled file so the styles you add here take precedence over styles defined in any other CSS
+ * files in this directory. Styles in this file should be added after the last require_* statement.
+ * It is generally better to create a new file per style scope.
+ *
+ *= require_tree .
+ *= require_self
+ */
+
+@import url('https://fonts.googleapis.com/css2?family=Lato');
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: "Montserrat", sans-serif;
-  color: black;
 }
 
-.container {
-  margin: 0 auto;
-  width: 30%;
+.background {
+  background-color: #fafafa;
 }
 
-h1 {
-  margin-bottom: 20px;
+:root {
+  --primary: #272a31;
+  --secondary: #ec5242;
+  --terciary: #d3d3d3;
+  --brand: #d23228;
+  --success: #0d7d4d;
+  --info: #03c7e8;
+  --warning: #f0cc00;
+  --danger: #ab0d02;
+  --light: #f1ecea;
+  --dark: #00262b;
+  --white: #fff;
+  --lato-font: 'Lato', sans-serif;
+}
+
+body {
+  font-family: var(--lato-font);
 }
 
 ul {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
   list-style: none;
-  margin: 0;
-}
-
-.user,
-.user-details {
-  display: flex;
-  gap: 30px;
-  text-decoration: none;
-}
-
-li:nth-child(even) {
-  background-color: aliceblue;
-}
-
-.userphoto,
-.username {
-  border: 1px solid black;
-}
-
-.userphoto {
-  width: 100px;
-  height: 100px;
-}
-
-.username {
-  display: flex;
-  flex-direction: column;
-  padding: 2%;
-  width: 70%;
-}
-
-.username p {
-  margin-top: 30px;
-  display: flex;
-  justify-content: flex-end;
 }
 
 a {
   text-decoration: none;
 }
 
-.user-details {
-  flex-direction: column;
-  gap: 10px;
+.container {
+  width: 90%;
+  max-width: 1100px;
+  margin: auto;
 }
 
-.bio,
-.eachpost {
-  border: 1px solid;
-  padding: 2%;
+.center {
+  text-align: center;
 }
 
-.bio {
-  margin-bottom: 10px;
+.left {
+  text-align: left;
 }
 
-.bio h4,
-.eachpost h4 {
-  margin-bottom: 20px;
+.my-1 {
+  margin: 10px 0;
 }
 
-.eachpost h6,
-.post h6 {
+.right {
   text-align: right;
 }
 
-.button {
-  margin: auto;
-  padding: 10px 20px;
-  font-size: 16px;
-  align-self: center;
-  justify-self: center;
+.users-title {
+  padding: 15px;
+  margin: 15px 0;
 }
 
-.post {
-  display: flex;
-  flex-direction: column;
-  gap: 2px;
-}
-
-.post div {
-  border: 1px solid;
-  padding: 2%;
-}
-
-.gap {
-  display: flex;
-  gap: 30px;
-}
-
-.form-label {
-  font-weight: bold;
-  display: block;
-  margin-bottom: 10px;
-}
-
-.form-input {
-  display: block;
-  width: 100%;
+.card {
   padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 16px;
-  margin-bottom: 20px;
+  margin: 20px 0;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+
+.flex {
+  display: flex;
+}
+
+.justify-end {
+  justify-content: flex-end;
+}
+
+.hover {
+  cursor: pointer;
+}
+
+.hover:hover {
+  background-color: #b5f6ff;
+  transform: scale(1.05);
+}
+
+.user-image {
+  max-width: 120px;
+  margin: 10px;
+  flex: 20%;
+}
+
+.user-data {
+  padding: 10px;
+  text-align: left;
+  margin: 10px;
+  flex: 80%;
+}
+
+.border {
+  border: 1px solid black;
+}
+
+.number-posts {
+  padding: 10px;
+  text-align: right;
+}
+
+.bg-green {
+  background: #0d7d4d;
+  color: #f1ecea;
+}
+
+.btn {
+  border: 0;
+  border-radius: 0.25rem;
+  background: #32393f;
+  color: white;
+  font-size: 1rem;
+  line-height: 1.2;
+  white-space: nowrap;
+  text-decoration: none;
+  padding: 0.25rem 0.5rem;
+  margin: 0.25rem;
+  cursor: pointer;
+}
+
+.commets-container {
+  padding: 10px;
 }
