--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsBlog</title>
+    <title>BlogOnRails</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
   </head>
 
-  <body>
-    <div class= "container">
-       <%= yield %>
-    </div>
+  <body class="container center">
+      <% flash.each do |name, msg| -%>
+      <p class="card bg-green"><%= msg %></p>
+    <% end -%>
+    <%= yield %>
   </body>
 </html>
