Add migrations for user, post, comment and like models and add authorization

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,14 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   </head>
 
-  <body class="container center">
-      <% flash.each do |name, msg| -%>
-      <p class="card bg-green"><%= msg %></p>
+    <body>
+    <%= render "layouts/navbar" %>
+    <% flash.each do |name, msg| -%>
+      <p class="bg-green p-1"><%= msg %></p>
     <% end -%>
-    <%= yield %>
+    <div class="container center">
+      <%= yield %>
+    </div>
+
   </body>
 </html>
