Add changes as suggested by previous code reviewer

--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,8 +1,13 @@
 <section>
-  <h1>Add comments form</h1>
-  <%= form_with model: @comment, url: user_post_comments_path, class: "card left" do |form| %>
-    <%= form.label :text %> <br>
-    <%= form.text_area :text , cols: 30, rows: 10 %> <br>
-    <%= form.submit "Submit", class: "btn" %>
+  <h2>Add a comment</h2>
+  <%= form_with model: @comment, url: user_post_comments_path(@post) do |form| %>
+
+    <div>
+      <%= form.label :text %>
+      <%= form.text_field :text, required: true, autofocus: true, placeholder: 'Leave a comment', class: 'form-input' %>
+    </div>
+
+    <%= form.submit "Comment" %>
+
   <% end %>
 </section>
