--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,36 +1,38 @@
-<h1>Welcome to post show page</h1>
+<h1>Show a particular post</h1>
 
-<section class="card left">
+<div class= "user-details gap" >
+            <div class="post">
+                <div>
+                    <h4> Post #<%= @post.id %> <%= @post.title %> by <%= @user.name %> </h4>
+                    <%= @post.text%>
+                    <h6>Comments:<%= @post.comments_counter %>, Likes:<%= @post.likes_counter %> </h6>
+                </div>
 
-  <div class="card">
-    <h2><%= @post.title %></h2>
-    <p><%= @post.text %></p>
-    <div class="right">
-      <span>Comments: <%= @post.comments_counter %></span>
-      <span>Likes: <%= @post.likes_counter %> </span>
-    </div>
-    <div class="right my-1 flex justify-end">
-      <% if user_signed_in? %>
-        <%= link_to "Add comment", new_user_post_comment_path(user_id: @post.author_id, post_id: @post.id ), class: "btn" %>
-        <%= form_with model: @like, url: user_post_likes_path(post_id: @post.id) do |form| %>
-          <%= form.submit "Add Like", class: "btn" %>
-        <% end %>
-        <% if can? :destroy, @post %>
-          <%= button_to "Delete post", user_post_path(user_id: @post.author.id, post_id: @post.id), method: :delete, class: 'btn-del'  %>
-        <% end %>
-      <% end %>
-    </div>
-  </div>
+                <div>
+                    <%= form_with model: @like, url:  user_post_likes_path(@user, @post) do |form|%>
+                        <%= form.submit 'Like post', class: 'submit' %>
+                    <%end%>
+                    <% if can? :manage, @post %>
+                         <%= button_to "Delete Post", user_post_path, method: :delete, class: "btn btn-outline-secondary" %>
+                    <% end %>
+                </div>
 
-  <div class="commets-container">
-    <h4>Comments:</h4>
-    <ul>
-          <% @post.comments.includes(:author).includes(:post).each do |comment| %>
-        <li class="flex justify-between align-center">
-          <p class="p-1"><%= comment.author.name %>: <%= comment.text %></p>
-          <% if can? :destroy, comment %>
-            <%= button_to "Delete comment", user_post_comment_path(user_id: comment.author.id, post_id: comment.post.id, id: comment.id), method: :delete, class: 'btn-del'  %>
-          <% end %>
-        </li>
-        <% end %>
-</section>
+                <div class="post-comments">
+                    <h4> Comments </h4>
+                    <% @post.comments.each do |comment| %>
+                        <p>
+                            <strong><%= comment.author.name %>:</strong>
+                            <span><%= comment.text %></span>
+                        </p>
+                        <% if can? :manage, comment %>
+                          <%= button_to "Delete Comment", user_post_comment_path(@user, @post, comment), method: :delete, class: "btn btn-outline-secondary" %>
+                        <% end %>
+                    <%end%>
+                </div>
+            </div>  
+
+            <button class="see-all-post d-flex border">
+                <%= link_to "Create new comment", new_user_post_comment_path(@user, @post) %>
+            </button>
+
+</div>
