--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,27 @@
-<section class="background">
-    <h1 class="users-title">Welcome to Users page</h1>
-    <ul>
-      <% @users.each do |user|%>
-        <%= link_to user do %>
-          <li class="card flex hover">
-            <div class="user-image border">
-              <%= image_tag('R.png',  :width => "100px", :heigth=>"100px") %>
-            </div>
-            <div class="user-data border">
-              <h1><%= user.name %></h1>
-              <p class="number-posts">Number of posts: <%= user.post_counter %></p>
-            </div>
-          </li>
-        <% end %>
-      <% end %>
-    </ul>  
-</section>
+<div>
+    <h1>List of all users</h1>
+</div>
+
+<ul> 
+    <% @users.each do |user| %>
+        <li class= "user" >
+                <div class = "userphoto">
+                    <% if user.photo %>
+                        <img src="<%= user.photo %>" >
+                    <% else %>
+                        <p> No image found </p>
+                    <% end %>
+                </div>
+
+                
+                    <div class = "username">
+                        <a href="<%= url_for(user_path(user)) %>" >
+                            <h2 ><%= user.name %></h2>
+                            <p> Number of posts: <%= user.posts_counter %> </p>
+                        </a>
+                    </div>
+        </li>
+    <% end %>
+</ul>
+
+
